# Problem-Set-4

./: CMakeLists.txt  CMakePresets.json  PS3.cpp  PS4.cpp  README.md
client/: CMakeLists.txt  client.cpp  clientwindow.cpp  clientwindow.h
proto/: ocr.proto
server/: CMakeLists.txt  server.cpp
